fix: flow-relative overflow and resize

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -18,7 +18,7 @@ p, address, blockquote, pre, table, dl, ul, ol, figure, fieldset {
 }
 
 html {
-    overflow-y: scroll;
+    overflow-block: scroll;
     background-color: $color-bg;
     color: $color-fg;
     font-size: $font-size-max;
@@ -102,7 +102,7 @@ td, th {
 
 textarea,
 select[multiple] {
-    resize: vertical;
+    resize: block;
 }
 
 // Prevent sub and sup affecting line-height.
